@@ -18,8 +18,7 @@
  */
 package se.inera.intyg.webcert.web.service.facade.impl;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
@@ -115,7 +114,7 @@ class GetCertificateTypesFacadeServiceImplTest {
     @Test
     void shallConvertResourceLinks() throws Exception {
         final var module = createIntygModule();
-        doReturn(Arrays.asList(module))
+        doReturn(List.of(module))
             .when(intygModuleRegistry)
             .listAllModules();
 
@@ -129,11 +128,58 @@ class GetCertificateTypesFacadeServiceImplTest {
 
         final var types = serviceUnderTest.get(PATIENT_ID);
         assertEquals(ResourceLinkTypeDTO.CREATE_CERTIFICATE, types.get(0).getLinks().get(0).getType());
+        assertTrue(types.get(0).getLinks().get(0).isEnabled());
+    }
+
+    @Test
+    void shallAddDisabledResourceLinkIfCreateCertificateIsUnavailable() throws Exception {
+        final var module = createIntygModule();
+        doReturn(List.of(module))
+                .when(intygModuleRegistry)
+                .listAllModules();
+
+        final var types = serviceUnderTest.get(PATIENT_ID);
+        assertEquals(ResourceLinkTypeDTO.CREATE_CERTIFICATE, types.get(0).getLinks().get(0).getType());
+        assertFalse(types.get(0).getLinks().get(0).isEnabled());
+    }
+
+    @Nested
+    class DeprecatedIntygModules {
+
+        void setup(boolean isDeprecated, boolean showDeprecated) throws Exception {
+            final var module = createIntygModule(isDeprecated, showDeprecated);
+
+            doReturn(Arrays.asList(module))
+                    .when(intygModuleRegistry)
+                    .listAllModules();
+
+            doNothing()
+                    .when(resourceLinkHelper)
+                    .decorateIntygModuleWithValidActionLinks(ArgumentMatchers.<List<IntygModuleDTO>>any(), any(Personnummer.class));
+        }
+
+        @Test
+        void shouldFilterOutDeprectatedIntygModules() throws Exception {
+            setup(true, false);
+            final var result = serviceUnderTest.get(PATIENT_ID);
+            assertEquals(0, result.size());
+        }
+
+        @Test
+        void shouldNotFilterOutDeprectatedIntygModulesIfShowDeprecated() throws Exception {
+            setup(true, true);
+            final var result = serviceUnderTest.get(PATIENT_ID);
+            assertEquals(1, result.size());
+        }
     }
 
     private IntygModule createIntygModule() {
+        return createIntygModule(false, false);
+    }
+
+    private IntygModule createIntygModule(boolean isDeprecated, boolean showDeprecated) {
         return new IntygModule("id", "label", "description", "detailedDescription", "issuerTypeId",
-            "cssPath", "scriptPath", "dependencyDefinitionPath", "defaultRecipient",
-            false, false);
+                "cssPath", "scriptPath", "dependencyDefinitionPath", "defaultRecipient",
+                isDeprecated, showDeprecated);
     }
 }
